@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libbde],
- [20111020],
+ [20111102],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
