@@ -1,6 +1,6 @@
 dnl Functions for libfguid
 dnl
-dnl Version: 20111007
+dnl Version: 20111025
 
 dnl Function to detect if libfguid is available
 dnl ac_libfguid_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -17,7 +17,8 @@ AC_DEFUN([AX_LIBFGUID_CHECK_LIB],
   ])
 
  AS_IF(
-  [test "x$ac_cv_with_libfguid" != xno],
+  [test "x$ac_cv_with_libfguid" = xno],
+  [ac_cv_libfguid=no],
   [dnl Check for headers
   AC_CHECK_HEADERS([libfguid.h])
  
